--- a/roles/harbor/tasks/main.yml
+++ b/roles/harbor/tasks/main.yml
@@ -42,7 +42,7 @@
 
   - name: Check and set home for Harbor installation
     set_fact:
-      harbor_home="/opt/harbor"
+      harbor_home="/opt"
     when: harbor_home is undefined
 
   - name: Check and set Harbor port
@@ -52,7 +52,7 @@
 
   - name: Check for version of Harbor to install
     set_fact:
-      harbor_version="1.10.2"
+      harbor_version="2.0.0"
     when: harbor_version is undefined
 
   - name: Create harbor folder
@@ -62,12 +62,17 @@
       mode: '0755'
       owner: "{{ harbor_process_owner }}"
       group: "{{ harbor_process_group }}"
-
+      
   - name: Download harbor
     unarchive:
       src: https://github.com/goharbor/harbor/releases/download/v{{ harbor_version}}/harbor-online-installer-v{{ harbor_version }}.tgz
       dest: "{{ harbor_home }}"
       remote_src: yes
+  
+  - name: Copy harbor.yml.tmpl to harbor.yml.tmpl
+    copy:
+      src: "{{ harbor_home }}/harbor/harbor.yml.tmpl"
+      dest: "{{ harbor_home }}/harbor/harbor.yml"
 
   - name: Update ipv4 address to access the harbor
     lineinfile:
